--- a/VRChat/17/1097517.html
+++ b/VRChat/17/1097517.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "13Zg15NvgCNfkb1d1Ggi4rQ6/txnyzmVgenXsAJlC9I="></script>
+    "56n+LXHxrdDuzbLl0/8vfV8LqdbQxU5LIfWlAN+QEQg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ソーセージとミートボールの合成食物3Dアバター","description":"ソーセージとミートボールの合成食物アバターです。\n\n\n※この製品は一発ネタ的なアバターです!\n勘違いさせる可能性があるので、invite onlyもしくはfriendでお使いを推奨します。\nfriend+やpublicでの使用はお控えを推奨します。\n\n\n\n-本モデル、改造モデルを使用することによってトラブル、損失が生じたとしても一切責任を負いません\n自己責任でお願いします\n\n内容物\nmeatsoseji.blend\nmeatsoseji.fbx\nmeatsoseji.unitypackage\nreadme.txt\n\nVRChat用に制作していますが、それ以外のツールに使っても構いません。\n\n\n\n初めての配布なので、至らない点があれば報告お願い致します。\n\n4248ポリゴンです。","url":"https://booth.pm/ja/items/1097517","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/18fe7deb-8ddf-4ab5-996f-f15cb62623fc/i/1097517/eb487681-ca88-4aee-b0e9-afeb9d346fe3_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="13Zg15NvgCNfkb1d1Ggi4rQ6/txnyzmVgenXsAJlC9I="></script>
+    nonce="56n+LXHxrdDuzbLl0/8vfV8LqdbQxU5LIfWlAN+QEQg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1097517/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1097517/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
