--- a/VRChat/41/1097441.html
+++ b/VRChat/41/1097441.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "B/ee7gDS2LMA6OgMitOVDBsC3s1PmMQG3R8e2p7xS08="></script>
+    "SRoNF2sJvkFeKC9vqCMCpHSgMt2N/GheRoZb8fralKI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おきゅたんbot VoicePack Vol.1","description":"おきゅみんのみんなから寄せられた「収録してほしいセリフ」を、「パルマ―！」とか「おきゅぅぅぅぅ！」ってどう言ったらいいの！？　と悪戦苦闘しながら深夜に収録した、おきゅたんbotの声データ集です！ \n\nHEARTalk用にいろんな声の高さのバリエーションが入ってたりも。\n\nやってみて声優さんは本当にすごいなって思いました。ノイズも入ってるけど、あまり気にしないでね。\n\nそれから、そうそう。マスコットアプリ文化祭2018には「VRすきまガールズ/おきゅたん」も参加しているので、よかったら作品作りに活用してみてくださーい！\nhttps://pronama.jp/2018/10/09/oculustan/\n\n\n-------------------------------------\n★ 利用条件について\n\n「おきゅたんbot VoicePack Vol.1」に入っている声データ一式は、アプリや動画、各種作品で商用、非商用問わず、下記条件の元、自由に使えるよ。\n\n・クレジット表記は不要だけど、作品のどこか、もしくはSNSなどで「おきゅたんbotのボイスファイル Vol.1」を使用したとか、リンクを示していただけるとハッピーだよ。\n\n・おきゅたんに関連した二次創作として利用する場合は、\nおきゅたんbot公式ページのQ\u0026Aのページを必ず確認して従ってね。\nhttps://ocutanbot.wixsite.com/ocutan/faq\n\n※二次創作に、とても優しい条件だよ。\n※応援したいので、作品についてのお知らせも大歓迎！\n\n・でもおきゅたんbotになりすましたり、公式作品と誤解するような利用や、キャラクターや関わる人、ファンを貶めたり迷惑行為をするのは悲しいのでやめてね。（ただ、わたしが冗談と笑える範囲だったり、おきゅたんbotとは別の存在とわかるような形で、ソーシャルVRやワールドなどで音声を利用したりはOKだよ）\n\n・おきゅたん/おきゅたんbot以外のキャラクターの声や\nナレーションとして使用してもいいよ？（使えるものならね！　おきゅっ）\n\n・反社会的な行為や宗教、政治的な主張を行う目的での利用は禁止だからね。\n\n・よく分からない点については気軽に相談してね。\n\n\n例）\n\nおきゅたん人形におきゅたんとしてしゃべらせる→OK\n\nアプリでおきゅたんbotがしゃべってるふうに演出する→OK\n\nおきゅたんアバターになり、おきゅたんbot本人のふりしてまわりに誤解させたままにする→NG\n\nおきゅたんアバターで一瞬本人に思わせて、実は違いまーす的な冗談として使う→OK\n\nワールドの仕掛けや音声案内に使う（使えるの？）→OK \n\n音楽素材に使う→OK\n\nおきゅたん以外の声として使う→OK\n\n迷惑行為に使う→NG\n\n聞いてほくそ笑む→OK💦","url":"https://booth.pm/ja/items/1097441","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/00e145f9-56bb-4d61-a781-aec554e36161/i/1097441/8e224a0e-6066-4a53-90bb-be0da37d988e_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="B/ee7gDS2LMA6OgMitOVDBsC3s1PmMQG3R8e2p7xS08="></script>
+    nonce="SRoNF2sJvkFeKC9vqCMCpHSgMt2N/GheRoZb8fralKI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -140,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +153,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -195,7 +195,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1097441/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               52
@@ -210,14 +210,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1097441/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               52
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
