--- a/VRChat/52/1097152.html
+++ b/VRChat/52/1097152.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "wfJFzCEEh58pyXLNIMNcZb7eOkMj80mTtmlQ1RL1kdc="></script>
+    "d0YSoiygt9aSf0K45L86E1wHO5OZ5X6F18RE+UYrs98="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ブーツ詰め合わせver2（スキニング済み）","description":"NFTの発行を禁止します。\n\nブーツの3Dモデルです。\n長いものと短いものが入っています。\nスキニング、はじめました。\n\nunitypackageを使う際は、arktoonシェーダーを設定しておりますので、あらかじめ導入しておいてください。\n\nポリゴン数\nブーツs　　　 1612\n長いブーツ　　1724\n新ブーツ　　　2830\n新長いブーツ　3578\n\n梱包データ\n・モデル(.fbx)\n・テクスチャ(.png)\n\n利用規約や禁止事項は画像の最後を御覧ください\n\nver2  :　ウェイト修正","url":"https://booth.pm/ja/items/1097152","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/b741927d-7967-46e1-905d-78b9949c6df9/i/1097152/b8cd61f7-08ce-4f3e-97b8-50636d48e616_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wfJFzCEEh58pyXLNIMNcZb7eOkMj80mTtmlQ1RL1kdc="></script>
+    nonce="d0YSoiygt9aSf0K45L86E1wHO5OZ5X6F18RE+UYrs98="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1097152/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               270
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1097152/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               270
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
