--- a/VRChat/03/1096903.html
+++ b/VRChat/03/1096903.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0PbC0vI3ViqZcMCELJ8OHXLLAwfdvUh5lbAzy3bk5C0="></script>
+    "SOj6DAWIUYM1IQJSWpvJfPZCkIgxqE0bF3w7hEUFWGs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"どこでも出撃エレベータ","description":"11/20更新\nモデルデータの形式をfbxに変更しました。\n\nどこでも出撃したい！そんなロボからマヨまでの願いを叶える商品がついに登場！\n好きなモデルを出撃させよう！\nサンプルアニメーションとすぐに使えるVRChatアバター設定済みPrefab同梱！\n\n\nポリゴン数1168\n\n※付属するシェーダを用いることで下のメッシュをくり抜いた表現をしています。\n※出撃させるモデルには同梱のシェーダか、レンダーキューをGeometry-2にしたシェーダを適応する必要があります。\n※エレベータ以外のモデルは付属しません\n\nエレベータのシェーダとしてYOSOHUTA様のYMatShader2を一部改変したものを使用しております。","url":"https://booth.pm/ja/items/1096903","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/3e9c0dda-28ad-4162-9dd2-7a79f3fe3e95/i/1096903/0f3d97e0-63e6-402e-91ad-eb6fc1db25de_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0PbC0vI3ViqZcMCELJ8OHXLLAwfdvUh5lbAzy3bk5C0="></script>
+    nonce="SOj6DAWIUYM1IQJSWpvJfPZCkIgxqE0bF3w7hEUFWGs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1096903/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               787
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1096903/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               787
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
