--- a/VRChat/17/1096817.html
+++ b/VRChat/17/1096817.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "XsRacx6TrK0aL71lj6pYKdTfQKsug0sMBkqrC802RwU="></script>
+    "GgkCH8g2MtD2Vh4pR4qzRR9NJYR7xsSsVBT5SJgVSEc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"SFFバッチ詰め合わせ第一弾","description":"StressFreeForceのバッチです！\n\n「デフォルトバッチ・バトルバッチ・スキンシップバッチ・オールオッケーバッチ」のFBXファイルとテクスチャを同封してます。\n\nただのアクセサリーとして使うことも可能です(デフォルトバッチ推奨)\n\n二次配布は可能です！どんどん広めてください！\n\n詳しい解説やDiscordのURLが欲しい方はMicroTwitterまでご連絡ください！【https://twitter.com/Sakura_Micro】\n\n製作者である 佐倉美黒(ミクロ) は本製品使用によるいかなるトラブル、損失に関して一切責任を負いません。","url":"https://booth.pm/ja/items/1096817","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f0140d86-c172-49cd-9b2b-d8f91ae857cb/i/1096817/bde57525-6c3e-4c49-a479-d096331a2004_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XsRacx6TrK0aL71lj6pYKdTfQKsug0sMBkqrC802RwU="></script>
+    nonce="GgkCH8g2MtD2Vh4pR4qzRR9NJYR7xsSsVBT5SJgVSEc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1096817/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1096817/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
