--- a/VRChat/14/1096614.html
+++ b/VRChat/14/1096614.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "tic30HiZ5coeNtHUm6FK1hyHkMawyFQes0yWjw3bTiY="></script>
+    "eWABr5dcBSsZpsBKjJJQMj09PlLNj4ZCryvG/juj764="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『メルキュリアス - The BlackQueen - 』","description":"販売用人型3Dモデル第三弾　\n量産型汎用義体参号機 BlackQueen改め \"メルキュリアス\"\n\n\nVRCアバターやゲーム等にご利用ください。\n\n\n\u003c注\u003eメルキュリアスはVRchatSDK3でセットアップされています!\n\nポリゴン数 : 41942\nシェーダ : DPT v2\n\nアイトラッキング, リップシンク, フルトラッキングレディ\n\n付属品　: \n・レバーアクションライフル　\"March\"\n(レバー、排莢口、弾込めカバー可動)\n\n・電子煙管\n\n\n","url":"https://booth.pm/ja/items/1096614","offers":{"priceCurrency":"JPY","@type":"Offer","price":"4000"},"image":"https://booth.pximg.net/c/620x620/9e316222-2e53-4586-9471-58ac96f0baec/i/1096614/45402dc4-8ccd-464b-aaf1-4adc796f7b4d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tic30HiZ5coeNtHUm6FK1hyHkMawyFQes0yWjw3bTiY="></script>
+    nonce="eWABr5dcBSsZpsBKjJJQMj09PlLNj4ZCryvG/juj764="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1096614/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               436
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1096614/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               436
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
