--- a/VRChat/96/1096096.html
+++ b/VRChat/96/1096096.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BZlrzCFFRMGKR9/u0ZhwnXC3IX2M6AJEUt0URGvIJak="></script>
+    "JC3ai51QdVPOSruGPeilIZFnDin017Uglf5kzzgRHVs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"こたつver1.2","description":"ジェネリックアバターでもワールドの設置物としても使える「こたつ」を作りました！\n\n冬の集まりにちょっと落ち着ける場所を用意してみませんか？\n\nこたつのみで△404ポリ(全付属品展開で△1736ポリ)\n\n【仕様メモ（2019/01/07　ver1.2）】\n\n・モデルのメッシュ分けを行いました。（みかん、湯呑、掛け布団が分離できます。）\n・机に足を追加しました。（シェイプキーで折りたためます）\n・カラーバリエーションを追加しました。（全５色になります）\n・座布団モデルを付属に追加しました。\n\n【仕様メモ（2018/１１/18　ver1.0）】\n販売開始","url":"https://booth.pm/ja/items/1096096","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/9b92b4aa-727e-4ad3-8a66-111e77c11365/i/1096096/8b9be9cd-1650-4f98-823e-2c3b4c6175d8_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BZlrzCFFRMGKR9/u0ZhwnXC3IX2M6AJEUt0URGvIJak="></script>
+    nonce="JC3ai51QdVPOSruGPeilIZFnDin017Uglf5kzzgRHVs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1096096/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               109
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1096096/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               109
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
